<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/cafe"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/gato"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorcafe"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/cafe"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/sesion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion1"
        android:layout_below="@id/cafe"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/sesion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion2"
        android:layout_below="@id/sesion1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion3"
        android:layout_below="@id/sesion2"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/horas1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas1"
        android:layout_below="@id/cafe"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/horas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas2"
        android:layout_below="@id/horas1"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas3"
        android:layout_below="@id/horas2"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>

</RelativeLayout>