<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/colorFondos"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:padding="15dp"
            android:layout_marginRight="12dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_local_airpor"
                android:tint="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@android:color/white"
                android:padding="8dp"
                android:layout_marginBottom="12dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/texto1"
                    android:gravity="center"
                    android:textColor="@color/colorTextos"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@android:color/white"
                android:padding="8dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/texto2"
                    android:gravity="center"
                    android:textColor="@color/colorTextos"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>